# reqif-opa-mcp

./: .dockerignore  .env.demo.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README-azure.md  README-reqif-ingest-cli.md  README.md  RELEASE.md  azure-pipelines.yml  hello.py  justfile  justfile~  progress.txt  prompt.md  pyproject.toml  ralph.sh
ado/: README.md
agents/: __init__.py  repo_security_agent.py  stub_agent.py
artifacts/: README.md
docs/: agent-runner-interface.md  deployment.md  evidence-store.md  sarif-mapping.md
infra/: main.bicep  main.parameters.example.json
ralph/: .last-branch  FORK.md  README.md  __init__.py  archive_prd.py  archiver.py  check_backlog.py  check_prd.py  commit_formatter.py  config.py  convert_issue_to_prd.py  create_pr.py  create_prd.py  executors.py  fetch_github_issue.py  file_manager.py  log_issue_completion.py  logging_utils.py  prd.json  progress.txt  ralph_cli.py  runner.py
reqif_ingest_cli/: __init__.py  __main__.py  artifact.py  docling_adapter.py  foundry_adapter.py  justfile  models.py  reqif_emitter.py  utils.py  xlsx_extractor.py
reqif_mcp/: __init__.py  __main__.py  compliance_gate.py  decision_logger.py  normalization.py  opa_evaluator.py  reqif_parser.py  sarif_producer.py  sarif_validator.py  server.py  validation.py
samples/: README.md
schemas/: agent-facts.schema.json  opa-input.schema.json  opa-output.schema.json  requirement-record.schema.json  verification-event.schema.json
scripts/: install_ci_tools.sh  write_artifact_summary.py
tasks/: prd-fix-health-endpoint-ci-failure.md  prd-reqif-ingest.md  (+2 more)
(+50 files in other folders)
