[project]
name = "reqif-mcp"
version = "0.1.0"
description = "ReqIF-OPA-SARIF compliance gate system for validating ReqIF requirements with OPA policies and producing SARIF reports."
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.26.0",
    "python-ulid>=3.1.0",
    "returns>=0.26.0",
    "fastmcp==3.0.0b1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "types-jsonschema>=4.26.0.20260109",
]
